--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "@types/node": "^12.12.24",
     "@types/react": "^16.9.17",
     "@types/react-dom": "^16.9.4",
+    "@types/react-responsive": "^8.0.2",
     "graphql-request": "^1.8.2",
     "mobx": "^5.15.1",
     "mobx-react-lite": "^1.5.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-responsive": "^8.0.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "semantic-ui-react": "^0.88.2",
