--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "graphql-request": "^1.8.2",
     "mobx": "^5.15.1",
     "mobx-react-lite": "^1.5.2",
+    "nuka-carousel": "^4.6.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-responsive": "^8.0.1",
@@ -42,5 +43,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {}
 }
