--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "semantic-ui-react": "^0.88.2",
-    "typescript": "^3.7.4"
+    "typescript": "^3.7.4",
+    "uniqid": "^5.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
