--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^16.9.17",
     "@types/react-dom": "^16.9.4",
     "@types/react-responsive": "^8.0.2",
+    "@types/uniqid": "^4.1.3",
     "axios": "^0.19.1",
     "graphql-request": "^1.8.2",
     "mobx": "^5.15.1",
