--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-responsive": "^8.0.2",
     "@types/uniqid": "^4.1.3",
     "axios": "^0.19.1",
+    "fs": "0.0.1-security",
     "graphql-request": "^1.8.2",
     "mobx": "^5.15.1",
     "mobx-react-lite": "^1.5.2",
