--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "vivid-travel-and-tours",
   "version": "0.1.0",
+  "homepage": "http://vividtravelandtours.github.io",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
