--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -11,6 +11,10 @@ jobs:
     - uses: actions/checkout@v1
     - name: Install
       run: npm install
+    - name: set config
+      run: |
+        git config --global user.email "efraim.lorenzana@gmail.com"
+        git config --global user.name "Efraim A. Lorenzana"
     - name: Build
       run: npm run build
     - name: Deploy
