updated yml file

--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -13,8 +13,8 @@ jobs:
       run: npm install
     - name: set config
       run: |
-        git config --global user.email "efraim.lorenzana@gmail.com"
-        git config --global user.name "Efraim A. Lorenzana"
+        git config --global user.email "vividtravelandtours.noreply@gmail.com"
+        git config --global user.name "vividtravelandtours"
     - name: Build
       run: npm run build
     - name: Deploy
