--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^16.9.17",
     "@types/react-dom": "^16.9.4",
     "@types/react-responsive": "^8.0.2",
+    "@types/react-router-dom": "^5.1.3",
     "@types/uniqid": "^4.1.3",
     "axios": "^0.19.1",
     "fs": "0.0.1-security",
